log/build_2021-06-22_16-39-30/pubsub/stderr.log
  File "/home/markros2/rosproject/install/pubsub/lib/python3.8/site-packages/pubsub/publisher.py", line 5
    from geom
            ^
SyntaxError: invalid syntax

